# rise-marketing-agent

./: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml
app/: config.py  database.py  main.py
app/agents/: _parse_json.py  brief_parser.py  copywriter.py  designer.py  publisher.py  qa_agent.py  scheduling_agent.py
app/api/: __init__.py  analytics.py  briefs.py  chat.py  deps.py  images.py  review.py
app/core/: security.py
app/graph/: edges.py  nodes.py  pipeline.py  state.py
app/models/: __init__.py  brief.py  chat.py  image.py  publication.py  review.py  version.py
app/schemas/: __init__.py  analytics.py  brief.py  chat.py  image.py  review.py
app/services/: __init__.py  chat_service.py  image_service.py  notification_service.py  pipeline_service.py  publish_service.py  review_service.py  storage_service.py
app/tools/: brand_tools.py  copy_tools.py  design_tools.py  publish_tools.py  qa_tools.py
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/review/[brief_id]/: page.tsx
frontend/src/components/: ActionButtons.tsx  PosterPreview.tsx  QAReport.tsx  QueueDashboard.tsx  ScoreForm.tsx  VersionHistory.tsx
frontend/src/hooks/: useReview.ts
frontend/src/lib/: api.ts  types.ts
migrations/: env.py
migrations/versions/: 001_initial_poster_schema.py  002_chat_and_images.py
storage/posters/approved/07bdcaafcad1/: 07bdcaafcad1.txt  schedule.txt
storage/posters/approved/5ca4034696b8/: 5ca4034696b8.txt  platforms.txt  schedule.txt
storage/posters/approved/7681f1ea47d6/: 7681f1ea47d6.txt  platforms.txt  schedule.txt
storage/posters/approved/8ae423f4c804/: 8ae423f4c804.txt  platforms.txt
storage/posters/approved/9027abfa67e5/: 9027abfa67e5.txt  schedule.txt
storage/posters/approved/b4fec20961f9/: b4fec20961f9.txt  platforms.txt  schedule.txt
storage/posters/approved/c4d3bb48b2bc/: c4d3bb48b2bc.txt
storage/posters/approved/d5cea193f421/: d5cea193f421.txt  schedule.txt
storage/posters/approved/dcff58c1b81e/: dcff58c1b81e.txt  schedule.txt
storage/posters/approved/ddea29722186/: ddea29722186.txt
tests/: conftest.py
tests/test_agents/: test_brief_parser.py
tests/test_api/: test_briefs.py  test_review.py
tests/test_graph/: __init__.py  test_hitl_gate.py  test_pipeline.py
tests/test_tools/: test_platform_apis.py
